@@ -1,5 +1,11 @@
 2025-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	[groff]: Regression-test Savannah #67771.
+
+	* src/roff/groff/tests/class-request-works.sh: Do it.
+
+2025-12-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	[groff]: Add unit test for `class` request.
 
 	* src/roff/groff/tests/class-request-works.sh: Do it.
